--- a/style.css
+++ b/style.css
@@ -19,8 +19,13 @@ a{
     text-decoration: none;
     padding: 3px;
 }
+a:hover{
+    background-color: royalblue;
+    border-radius: 15px;
+    transition: 1s;
+}
 .container{
-    background-color: var(--grey);
+    background-image: url(assets/pexels-pixabay-235985.jpg);
 }
 .header{
     display: flex;
@@ -28,21 +33,17 @@ a{
     justify-content: space-between;
 }
 .header_nav_list{
-    
-    background-color: darkgray;
-    font-size: 150%;
-    
+    font-size: 150%;   
 }
 h1{
     font-size: 300%;
-    margin-left: 15px;
+    margin-left: 75px;
 }
 .header_nav_list_item{
     list-style-type:none;
     margin: 5px;
 }
 .about_me_section{
-    background-color: blue;
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 1rem auto;
@@ -52,45 +53,49 @@ h1{
 .about_me_header{
     grid-column: 1;
     grid-row: 1;
+    padding-left: 7%;
 }
 .about_me_photo{
     grid-column: 1;
     grid-row: 2;
-    padding-left: 2%;
+    padding-left: 25%;
 }
 .profile_image{
     height: 20rem;
     max-width: 75%;
+    -webkit-box-shadow: 4px 17px 31px -2px rgba(0,0,0,.5);
+    -moz-box-shadow: 4px 17px 31px -2px rgba(0,0,0,.5);
+    box-shadow: 4px 17px 31px -2px rgba(0,0,0,.5);
 }
 .about_me_text{
     grid-column: 2;
     grid-row: 1;
-    display: grid;
+    display: flex;
+    flex-direction: column;
     padding-right: 30%;
     padding-top: 50px;
 }
-.section_bio{
-    background-color: coral;
+.project_header{
+    padding-left: 5%;
 }
-
 .project_section{
-    background-color: brown;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     padding: 1rem;
 }
-.project_header{
-    
-}
+
 .project_image{
     height: 20rem;
     max-width: 75%;
+    -webkit-box-shadow: 4px 17px 31px -2px rgba(0,0,0,.5);
+    -moz-box-shadow: 4px 17px 31px -2px rgba(0,0,0,.5);
+    box-shadow: 4px 17px 31px -2px rgba(0,0,0,.5);
 }
 .footer{
     text-align: center;
     background-color: darkgrey;
 }
-@media only screen and (max-width: 767px){
+@media only screen and (max-width: 1000px){
     .header{
         align-items: center;
         display: flex;
@@ -103,7 +108,7 @@ h1{
         flex-direction: column;
         justify-content: center;
     }
-    .about_me{
+    .about_me_section{
         display: flex;
         align-items: center;
         flex-direction: column;
